# Aura

./: .gitignore  README.md  env.example  pyproject.toml
app/: main.py
app/agents/: __init__.py  react_agent.py
app/api/routes/: __init__.py  answers.py  ping.py  tickets.py
app/dependencies/: tickets.py
app/evaluation/: __init__.py  crag.py  types.py
app/response/: compiler.py
app/retrieval/: query_expansion.py
app/security/: whitelist.py
app/services/: postgres.py  tickets.py
app/tickets/: __init__.py  models.py  pipeline.py  repository.py  service.py  state.py
app/ui/: api.py  auth.py  streamlit_app.py
apps/api/: main.py
apps/api/agents/: react_agent.py
apps/api/core/: config.py  logging.py
apps/api/dependencies/: auth.py
apps/api/evaluation/: crag.py
apps/api/metrics/: __init__.py  base.py  definitions.py  exporters.py  registry.py
apps/api/middleware/: __init__.py  rbac.py
apps/api/response/: __init__.py  compiler.py  streaming.py
apps/api/retrieval/: __init__.py  embedding_pipeline.py  (+3 more)
docs/: codex_gelistirme_adimlari.md  gelistirme_dokumani_v1.md  metrics_dashboard_example.md
infra/alembic/: alembic.ini  env.py  script.py.mako
tests/: __init__.py  conftest.py  test_answer_routes.py  test_confidence_stats_repository.py  test_connections.py  test_crag_evaluator.py  test_embedding_pipeline.py  test_qdrant_client_utils.py  test_rag_fusion.py  test_rbac.py  test_response_compiler.py  test_ticket_pipeline.py  test_ticket_repository.py  test_ticket_routes.py  test_ticket_service.py  test_ticket_state_machine.py  test_whitelist.py
(+14 files in other folders)
