[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-api"
version = "0.1.0"
description = "Aura FastAPI service with RBAC and connection testers"
authors = [{name = "Aura Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.24",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
    "qdrant-client>=1.7",
    "httpx>=0.27",
    "opentelemetry-api>=1.22",
    "opentelemetry-sdk>=1.22",
    "opentelemetry-exporter-otlp>=1.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
ui = [
    "streamlit>=1.29",
]
retrieval = [
    "sentence-transformers>=2.6",
    "torch>=2.1",
]

[tool.setuptools.packages.find]
include = ["apps*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
asyncio_mode = "auto"
